# filewarden

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: cargo-check.yml  release-binary.yml
src/: aes.rs  main.rs  save.rs  term.rs
